--- a/css/style-light.css
+++ b/css/style-light.css
@@ -1,5 +1,5 @@
-body-theme {
-  background-color: rgb(227, 245, 249);
+.body-theme {
+  background-color: rgb(236, 252, 255);
 }
 
 
@@ -57,4 +57,28 @@ hr.solid-theme {
   color: rgb(140, 182, 204);
 }
 
+.side-nav-theme {
+  background-color: aliceblue;
+}
+
+.a-nav-theme {
+  color:  rgb(55, 71, 79);
+}
+
+.span-nav-theme {
+  color: rgb(55, 71, 79);
+  background-color: white;
+  width: 122px;
+  margin: 0;
+}
+
+.a-nav-theme:hover {
+  background-color: rgb(57, 54, 54);
+  color: rgb(255, 255, 255);
+}
+
+.a-nav-theme.active {
+  background-color: slategray;
+  color: white;
+}
 
