--- a/css/style.css
+++ b/css/style.css
@@ -10,146 +10,12 @@ hr.solid {
   width: 100%;
 }
 
-
-.topnav {
-  position: fixed; 
-  background-position: 30px;
-  top: 0; 
-  left: 0;
-  width: 100%; 
-  z-index: 1000; 
-}
-
-.a-nav {
-  float: right;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.a-nav-side {
-  float: right;
-  text-align: center;
-  padding: 14px 16px;
-  width: 122px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.span-nav {
-  float: left;
-  font-weight: bold;
-  text-align: center;
-  padding: 10px 14px;
-  text-decoration: none;
-  font-size: 21px;
-}
-
-
-
-
-/*
-.topnav a:hover {
-
-}
-
-.topnav a.active {
-
-}
-*/
-.topnav img {
-  width: 48px;
-  height: 48px;
-  float: left;
-}
-
-.sidenav img {
-  width: 48px;
-  padding-left: 12px;
-  height: 48px;
-  float: left;
-}
-
 .header { 
     padding-top: 25px;
     width: 100%;
     overflow: hidden;
     display: flex;
 }
-/*
-.content{
-
-}
-*/
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #2a6274;
-  color: white;
-  padding: 14px 16px;
-  font-size: 17px;
-  text-decoration: none;
-  border: none;
-}
-
-.dropbtn-side {
-  background-color: #2a6274;
-  color: white;
-  padding: 14px 14px;
-  text-align: center;
-  width: 122px;
-  left: 0;
-  font-size: 17px;
-  text-decoration: none;
-  border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: block;
-  float: right;
-  z-index: 1;
-  margin: 0;
-  padding: 0;
-}
-
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
-
-
-
-
-
-
-
 
 .title {
     padding-left: 25px;
@@ -173,7 +39,6 @@ hr.solid {
     float: right;
 }
 
-
 .mode-button {
   float: left;
   font-weight: bold;
@@ -182,7 +47,6 @@ hr.solid {
   text-decoration: none;
   font-size: 21px;
 }
-
 
 .text-box {
   max-width: 300px;
@@ -197,7 +61,6 @@ hr.solid {
   padding-left: 55px;
 }
 
-
 .allign-center {
     text-align: center;
 }
@@ -206,7 +69,6 @@ hr.solid {
   list-style-type: square;
   margin: 0;
 }
-
 
  .switch {
   float: left;
@@ -256,6 +118,7 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+
 .corner-text {
   position: absolute;
   bottom: 5px;
@@ -279,9 +142,6 @@ input:checked + .slider:before {
   min-height: 100px;
 }
 
-.sidenav {
-  display: none;
-}
 
 .left-div {
   display: flex;
@@ -292,17 +152,18 @@ input:checked + .slider:before {
   margin-left: 150px;
 }
 
-@media only screen and (max-width: 600px) {
-  .topnav {
-    display: none;
-  }
-  .sidenav {
-    display: inline;
-    height: 100%; 
-    left: 0;
-    width: 150px;
-    position: fixed;
-  }
+.svg-class {
+  display: flex;
+  float: left;
+}
+
+
+#checkBox1 {
+
+}
+
+#checkBox2{
+
 }
 
 
