--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,11 @@ hr.solid {
 .title {
     padding-left: 25px;
     font-size: 60px;
-    display: flex;
+    display: block;
+}
+
+.title:first-letter {
+  font-size: larger;
 }
 
 .subtitle {
@@ -78,12 +82,19 @@ hr.solid {
   height: 34px;
 }
 
-
-.switch input {
+#checkBox1 {
   opacity: 0;
   width: 0;
   height: 0;
 }
+
+#checkBox2{
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+
 
 /* The slider */
 .slider {
@@ -127,7 +138,6 @@ input:checked + .slider:before {
 
 .margin-left {
   margin-left: 25px;
-  padding-bottom: 10px;
 }
 
 .large-text {
@@ -157,13 +167,27 @@ input:checked + .slider:before {
   float: left;
 }
 
-
-#checkBox1 {
-
+.imgGal{
+  margin: auto;
+  width: 50%;
+  padding-top: 10px;
 }
 
-#checkBox2{
+.author{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-size: 22px;
+}
 
+.imgDiv{
+  margin: 0;
+  padding: 0;
+}
+
+.ul-style-header{
+  list-style-type: none;
+  margin: 0;
 }
 
 
